@@ -447,7 +447,6 @@ namespace gameswf
 		virtual int	get_current_frame() const = 0;
 		virtual bool	has_looped() const = 0;
 		
-		virtual void	restart() = 0;
 		virtual void	advance(float delta_time) = 0;
 		virtual void	goto_frame(int frame_number) = 0;
 		// Returns true if labeled frame is found.
