@@ -1,3 +1,14 @@
+2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* base/tu_file.cpp: new tu_file("http://...") returns
+	m_data=NULL if there was a failure
+	* gameswf/a lot of files: removed useless restart(),
+	fixed stream sound bug that have been showing up 
+	at movie with one frame, the operations that are executed at removing
+	dlist object moved to remove() function
+	* net/http_client.*
+	* net/net_interface_tcp.cpp: porting to Linux
+
 2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* net/http_client.cpp,
